Revert kinto.ini

--- a/config/kinto.ini
+++ b/config/kinto.ini
@@ -3,12 +3,12 @@ use = egg:kinto
 
 cliquet.project_name = cloud storage
 cliquet.project_docs = https://kinto.rtfd.org/
-cliquet.cache_backend = cliquet.cache.redis
-cliquet.cache_url = redis://localhost/0
-cliquet.storage_backend = cliquet.storage.redis
-cliquet.storage_url = redis://localhost/1
-cliquet.permission_backend = cliquet.permission.redis
-cliquet.permission_url = redis://localhost/2
+cliquet.cache_backend = cliquet.cache.postgresql
+cliquet.cache_url = postgres://postgres:postgres@localhost/postgres
+cliquet.storage_backend = cliquet.storage.postgresql
+cliquet.storage_url = postgres://postgres:postgres@localhost/postgres
+cliquet.permission_backend = cliquet.permission.postgresql
+cliquet.permission_url = postgres://postgres:postgres@localhost/postgres
 cliquet.http_scheme = http
 cliquet.http_host = localhost:8888
 cliquet.retry_after_seconds = 30
